--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'invite-system'
-include 'bpmn'
+include 'bpmn-dmn'
 include 'address-library'
 include 'address-service'
 include 'amenity-service'
@@ -9,3 +9,4 @@ include 'discovery-service'
 include 'gateway-service'
 include 'job-worker-service'
 include 'organization-service'
+include 'process-service'
