--- a/configuration-service/build.gradle
+++ b/configuration-service/build.gradle
@@ -4,21 +4,8 @@ plugins {
 	id 'java'
 }
 
-group = 'com.invite'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
-repositories {
-	mavenCentral()
-}
-
 ext {
 	set('springCloudVersion', "2021.0.3")
-}
-
-dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-config-server'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
@@ -27,6 +14,16 @@ dependencyManagement {
 	}
 }
 
-tasks.named('test') {
+dependencies {
+	implementation 'org.springframework.cloud:spring-cloud-config-server'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+bootJar {
+	archiveName = "$baseName.$extension"
+}
+
+test {
 	useJUnitPlatform()
 }
