--- a/configuration-service/src/main/resources/config/gateway-service.yml
+++ b/configuration-service/src/main/resources/config/gateway-service.yml
@@ -5,7 +5,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8981/eureka/
+      defaultZone: ${EUREKA_URI:http://localhost:8981/eureka}
 
 spring:
   cloud:
