--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,7 @@ include 'line-of-business-library'
 include 'market-library'
 include 'member-library'
 include 'membership-library'
-//include 'reservation-library'
+include 'reservation-library'
 include 'provider-group-library'
 include 'address-service'
 include 'amenity-service'
@@ -28,4 +28,4 @@ include 'member-service'
 include 'membership-service'
 include 'process-service'
 include 'provider-group-service'
-//include 'reservation-service'
+include 'reservation-service'
