--- a/reservation-service/build.gradle
+++ b/reservation-service/build.gradle
@@ -17,9 +17,16 @@ dependencyManagement {
 
 dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation project(':domain-service-library')
+	implementation project(':reservation-library')
+	implementation project(':amenity-library')
+	implementation project(':member-library')
+	implementation project(':membership-library')
+	implementation project(':club-library')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
