--- a/design-documents/data-initial.yml
+++ b/design-documents/data-initial.yml
@@ -659,3 +659,629 @@ ProviderGroups:
     name: XLife Dine & Play Away Golf Sports Clubs Access Only Owned
   - id: 37
     name: XLife Dine & Play Away Golf Sports Clubs Access Only Alliance
+Clubs:
+  - id: 1
+    name: Brookhaven Country Club
+    phoneNumber:
+    website:
+    markets:
+      - id: 45
+        name: Dallas
+    communities:
+      - id: 9
+        name: Dallas Fort Worth
+    providerGroups:
+      - id: 18
+        name: XLife Dine & Play Away Golf Owned
+    amenities:
+      - id: 1
+        name: DINING
+      - id: 2
+        name: COURT
+      - id: 3
+        name: GOLF
+    benefitPackages:
+      - id: 1
+        name: Access Advantage Standard Programming
+        benefits:
+          - id: 2
+            code: B0002
+            description: Sunday Noon - Friday Noon; 7 Day advance tee times
+          - id: 23
+            code: B0023
+            description: 4 rounds per month at Home Club
+      - id: 2
+        name: Dine & Play Away Standard Programming
+        benefits:
+          - id: 3
+            code: B0003
+            description: 2 rounds per month per club, outside of 100 mile radius from Home
+              Club
+          - id: 4
+            code: B0004
+            description: Clubs block one morning and one afternoon time slot each day for
+              Play Away access
+          - id: 5
+            code: B0005
+            description: 30 Day advance tee times
+          - id: 6
+            code: B0006
+            description: Tiered Play rates (in addition to regular cart fee) based on Home
+              club and Destination Club segmentation
+          - id: 7
+            code: B0007
+            description: 50% off Home club dining, some clubs with peak time restrictions
+          - id: 8
+            code: B0008
+            description: Dining access for all Play Away members at all clubs (Community
+              & Travel)
+          - id: 9
+            code: B0009
+            description: 25% off evening dining at all City & Stadium clubs
+    segment:
+      color: Green
+      name: Select
+    lineOfBusiness:
+      id: 2
+      name: Golf Club
+    address:
+      id: 1
+      line1: 3333 Golfing Green Dr
+      line2:
+      city: Farmers Branch
+      state: TX
+      zipCode:
+        postalCode: '75234'
+        plusFour:
+      geoLocation:
+        latitude: 32.93752775
+        longitude: -96.8639805513445
+    alliance: false
+    active: true
+    owned: true
+  - id: 2
+    name: Trophy Club Country Club
+    phoneNumber:
+    website:
+    markets:
+      - id: 45
+        name: Dallas
+    communities:
+      - id: 9
+        name: Dallas Fort Worth
+    providerGroups:
+      - id: 18
+        name: XLife Dine & Play Away Golf Owned
+    amenities:
+      - id: 1
+        name: DINING
+      - id: 2
+        name: COURT
+      - id: 3
+        name: GOLF
+    benefitPackages:
+      - id: 1
+        name: Access Advantage Standard Programming
+        benefits:
+          - id: 2
+            code: B0002
+            description: Sunday Noon - Friday Noon; 7 Day advance tee times
+          - id: 23
+            code: B0023
+            description: 4 rounds per month at Home Club
+      - id: 2
+        name: Dine & Play Away Standard Programming
+        benefits:
+          - id: 3
+            code: B0003
+            description: 2 rounds per month per club, outside of 100 mile radius from Home
+              Club
+          - id: 4
+            code: B0004
+            description: Clubs block one morning and one afternoon time slot each day for
+              Play Away access
+          - id: 5
+            code: B0005
+            description: 30 Day advance tee times
+          - id: 6
+            code: B0006
+            description: Tiered Play rates (in addition to regular cart fee) based on Home
+              club and Destination Club segmentation
+          - id: 7
+            code: B0007
+            description: 50% off Home club dining, some clubs with peak time restrictions
+          - id: 8
+            code: B0008
+            description: Dining access for all Play Away members at all clubs (Community
+              & Travel)
+          - id: 9
+            code: B0009
+            description: 25% off evening dining at all City & Stadium clubs
+    segment:
+      color: Yellow
+      name: Signature
+    lineOfBusiness:
+      id: 2
+      name: Golf Club
+    address:
+      id: 2
+      line1: 500 Trophy Club Dr
+      line2:
+      city: Trophy Club
+      state: TX
+      zipCode:
+        postalCode: '76262'
+        plusFour:
+      geoLocation:
+        latitude: 32.997559
+        longitude: -97.193252
+    alliance: false
+    active: true
+    owned: true
+  - id: 3
+    name: The Clubs of Kingwood
+    phoneNumber:
+    website:
+    markets:
+      - id: 82
+        name: Houston
+    communities:
+      - id: 14
+        name: Houston
+    providerGroups:
+      - id: 18
+        name: XLife Dine & Play Away Golf Owned
+    amenities:
+      - id: 1
+        name: DINING
+      - id: 2
+        name: COURT
+      - id: 3
+        name: GOLF
+    benefitPackages:
+      - id: 1
+        name: Access Advantage Standard Programming
+        benefits:
+          - id: 2
+            code: B0002
+            description: Sunday Noon - Friday Noon; 7 Day advance tee times
+          - id: 23
+            code: B0023
+            description: 4 rounds per month at Home Club
+      - id: 2
+        name: Dine & Play Away Standard Programming
+        benefits:
+          - id: 3
+            code: B0003
+            description: 2 rounds per month per club, outside of 100 mile radius from Home
+              Club
+          - id: 4
+            code: B0004
+            description: Clubs block one morning and one afternoon time slot each day for
+              Play Away access
+          - id: 5
+            code: B0005
+            description: 30 Day advance tee times
+          - id: 6
+            code: B0006
+            description: Tiered Play rates (in addition to regular cart fee) based on Home
+              club and Destination Club segmentation
+          - id: 7
+            code: B0007
+            description: 50% off Home club dining, some clubs with peak time restrictions
+          - id: 8
+            code: B0008
+            description: Dining access for all Play Away members at all clubs (Community
+              & Travel)
+          - id: 9
+            code: B0009
+            description: 25% off evening dining at all City & Stadium clubs
+    segment:
+      color: Green
+      name: Select
+    lineOfBusiness:
+      id: 2
+      name: Golf Club
+    address:
+      id: 3
+      line1: 1700 Lake Kingwood Trl
+      line2:
+      city: Kingwood
+      state: TX
+      zipCode:
+        postalCode: '77339'
+        plusFour:
+      geoLocation:
+        latitude: 30.037706200000002
+        longitude: -95.178274850129
+    alliance: false
+    active: true
+    owned: true
+  - id: 4
+    name: Stonebriar Country Club
+    phoneNumber:
+    website:
+    markets:
+      - id: 82
+        name: Houston
+    communities:
+      - id: 14
+        name: Houston
+    providerGroups:
+      - id: 18
+        name: XLife Dine & Play Away Golf Owned
+    amenities:
+      - id: 1
+        name: DINING
+      - id: 2
+        name: COURT
+      - id: 3
+        name: GOLF
+    benefitPackages:
+      - id: 1
+        name: Access Advantage Standard Programming
+        benefits:
+          - id: 2
+            code: B0002
+            description: Sunday Noon - Friday Noon; 7 Day advance tee times
+          - id: 23
+            code: B0023
+            description: 4 rounds per month at Home Club
+      - id: 2
+        name: Dine & Play Away Standard Programming
+        benefits:
+          - id: 3
+            code: B0003
+            description: 2 rounds per month per club, outside of 100 mile radius from Home
+              Club
+          - id: 4
+            code: B0004
+            description: Clubs block one morning and one afternoon time slot each day for
+              Play Away access
+          - id: 5
+            code: B0005
+            description: 30 Day advance tee times
+          - id: 6
+            code: B0006
+            description: Tiered Play rates (in addition to regular cart fee) based on Home
+              club and Destination Club segmentation
+          - id: 7
+            code: B0007
+            description: 50% off Home club dining, some clubs with peak time restrictions
+          - id: 8
+            code: B0008
+            description: Dining access for all Play Away members at all clubs (Community
+              & Travel)
+          - id: 9
+            code: B0009
+            description: 25% off evening dining at all City & Stadium clubs
+    segment:
+      color: Blue
+      name: Premier
+    lineOfBusiness:
+      id: 4
+      name: Country Club
+    address:
+      id: 4
+      line1: 5050 Country Club Dr
+      line2:
+      city: Frisco
+      state: TX
+      zipCode:
+        postalCode: '75034'
+        plusFour:
+      geoLocation:
+        latitude: 33.096720250000004
+        longitude: -96.8533531412519
+    alliance: false
+    active: true
+    owned: true
+Members:
+  - id: 1
+    loginId: member1
+    firstName: Alfred
+    lastName: Smith
+    email:
+    homeAddress:
+      id: 5
+      line1: 3307 Chadwell Dr
+      line2:
+      city: Farmers Branch
+      state: TX
+      zipCode:
+        postalCode: '75234'
+        plusFour:
+      geoLocation:
+        latitude: 32.930355
+        longitude: -96.866276
+  - id: 2
+    loginId: member2
+    firstName: Alisha
+    lastName: Smith
+    email:
+    homeAddress:
+      id: 6
+      line1: 3307 Chadwell Dr
+      line2:
+      city: Farmers Branch
+      state: TX
+      zipCode:
+        postalCode: '75234'
+        plusFour:
+      geoLocation:
+        latitude: 32.930355
+        longitude: -96.866276
+  - id: 3
+    loginId: member3
+    firstName: Bob
+    lastName: Johns
+    email:
+    homeAddress:
+      id: 7
+      line1: 3350 South Cotswold Manor Drive
+      line2:
+      city: Kingwood
+      state: TX
+      zipCode:
+        postalCode: '77339'
+        plusFour:
+      geoLocation:
+        latitude: 30.0353877
+        longitude: -95.20746071890034
+Memberships:
+  - id: 1
+    level: GOLD
+    members:
+      - id: 1
+        loginId: member1
+        firstName: Alfred
+        lastName: Smith
+        email:
+        homeAddress:
+          id: 5
+          line1: 3307 Chadwell Dr
+          line2:
+          city: Farmers Branch
+          state: TX
+          zipCode:
+            postalCode: '75234'
+            plusFour:
+          geoLocation:
+            latitude: 32.930355
+            longitude: -96.866276
+      - id: 2
+        loginId: member2
+        firstName: Alisha
+        lastName: Smith
+        email:
+        homeAddress:
+          id: 6
+          line1: 3307 Chadwell Dr
+          line2:
+          city: Farmers Branch
+          state: TX
+          zipCode:
+            postalCode: '75234'
+            plusFour:
+          geoLocation:
+            latitude: 32.930355
+            longitude: -96.866276
+    benefitPackage:
+      id: 2
+      name: Dine & Play Away Standard Programming
+      benefits:
+        - id: 3
+          code: B0003
+          description: 2 rounds per month per club, outside of 100 mile radius from Home
+            Club
+        - id: 4
+          code: B0004
+          description: Clubs block one morning and one afternoon time slot each day for
+            Play Away access
+        - id: 5
+          code: B0005
+          description: 30 Day advance tee times
+        - id: 6
+          code: B0006
+          description: Tiered Play rates (in addition to regular cart fee) based on Home
+            club and Destination Club segmentation
+        - id: 7
+          code: B0007
+          description: 50% off Home club dining, some clubs with peak time restrictions
+        - id: 8
+          code: B0008
+          description: Dining access for all Play Away members at all clubs (Community
+            & Travel)
+        - id: 9
+          code: B0009
+          description: 25% off evening dining at all City & Stadium clubs
+    homeClub:
+      id: 1
+      name: Brookhaven Country Club
+      phoneNumber:
+      website:
+      markets:
+        - id: 45
+          name: Dallas
+      communities:
+        - id: 9
+          name: Dallas Fort Worth
+      providerGroups:
+        - id: 18
+          name: XLife Dine & Play Away Golf Owned
+      amenities:
+        - id: 1
+          name: DINING
+        - id: 2
+          name: COURT
+        - id: 3
+          name: GOLF
+      benefitPackages:
+        - id: 1
+          name: Access Advantage Standard Programming
+          benefits:
+            - id: 2
+              code: B0002
+              description: Sunday Noon - Friday Noon; 7 Day advance tee times
+            - id: 23
+              code: B0023
+              description: 4 rounds per month at Home Club
+        - id: 2
+          name: Dine & Play Away Standard Programming
+          benefits:
+            - id: 3
+              code: B0003
+              description: 2 rounds per month per club, outside of 100 mile radius from
+                Home Club
+            - id: 4
+              code: B0004
+              description: Clubs block one morning and one afternoon time slot each day
+                for Play Away access
+            - id: 5
+              code: B0005
+              description: 30 Day advance tee times
+            - id: 6
+              code: B0006
+              description: Tiered Play rates (in addition to regular cart fee) based on
+                Home club and Destination Club segmentation
+            - id: 7
+              code: B0007
+              description: 50% off Home club dining, some clubs with peak time restrictions
+            - id: 8
+              code: B0008
+              description: Dining access for all Play Away members at all clubs (Community
+                & Travel)
+            - id: 9
+              code: B0009
+              description: 25% off evening dining at all City & Stadium clubs
+      segment:
+        color: Green
+        name: Select
+      lineOfBusiness:
+        id: 2
+        name: Golf Club
+      address:
+        id: 1
+        line1: 3333 Golfing Green Dr
+        line2:
+        city: Farmers Branch
+        state: TX
+        zipCode:
+          postalCode: '75234'
+          plusFour:
+        geoLocation:
+          latitude: 32.93752775
+          longitude: -96.8639805513445
+      active: true
+      owned: true
+      alliance: false
+  - id: 2
+    level: GOLD
+    members:
+      - id: 3
+        loginId: member3
+        firstName: Bob
+        lastName: Johns
+        email:
+        homeAddress:
+          id: 7
+          line1: 3350 South Cotswold Manor Drive
+          line2:
+          city: Kingwood
+          state: TX
+          zipCode:
+            postalCode: '77339'
+            plusFour:
+          geoLocation:
+            latitude: 30.0353877
+            longitude: -95.20746071890034
+    benefitPackage:
+      id: 1
+      name: Access Advantage Standard Programming
+      benefits:
+        - id: 2
+          code: B0002
+          description: Sunday Noon - Friday Noon; 7 Day advance tee times
+        - id: 23
+          code: B0023
+          description: 4 rounds per month at Home Club
+    homeClub:
+      id: 3
+      name: The Clubs of Kingwood
+      phoneNumber:
+      website:
+      markets:
+        - id: 82
+          name: Houston
+      communities:
+        - id: 14
+          name: Houston
+      providerGroups:
+        - id: 18
+          name: XLife Dine & Play Away Golf Owned
+      amenities:
+        - id: 1
+          name: DINING
+        - id: 2
+          name: COURT
+        - id: 3
+          name: GOLF
+      benefitPackages:
+        - id: 1
+          name: Access Advantage Standard Programming
+          benefits:
+            - id: 2
+              code: B0002
+              description: Sunday Noon - Friday Noon; 7 Day advance tee times
+            - id: 23
+              code: B0023
+              description: 4 rounds per month at Home Club
+        - id: 2
+          name: Dine & Play Away Standard Programming
+          benefits:
+            - id: 3
+              code: B0003
+              description: 2 rounds per month per club, outside of 100 mile radius from
+                Home Club
+            - id: 4
+              code: B0004
+              description: Clubs block one morning and one afternoon time slot each day
+                for Play Away access
+            - id: 5
+              code: B0005
+              description: 30 Day advance tee times
+            - id: 6
+              code: B0006
+              description: Tiered Play rates (in addition to regular cart fee) based on
+                Home club and Destination Club segmentation
+            - id: 7
+              code: B0007
+              description: 50% off Home club dining, some clubs with peak time restrictions
+            - id: 8
+              code: B0008
+              description: Dining access for all Play Away members at all clubs (Community
+                & Travel)
+            - id: 9
+              code: B0009
+              description: 25% off evening dining at all City & Stadium clubs
+      segment:
+        color: Green
+        name: Select
+      lineOfBusiness:
+        id: 2
+        name: Golf Club
+      address:
+        id: 3
+        line1: 1700 Lake Kingwood Trl
+        line2:
+        city: Kingwood
+        state: TX
+        zipCode:
+          postalCode: '77339'
+          plusFour:
+        geoLocation:
+          latitude: 30.037706200000002
+          longitude: -95.178274850129
+      active: true
+      owned: true
+      alliance: false
