--- a/job-worker-library/build.gradle
+++ b/job-worker-library/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compileOnly 'jakarta.validation:jakarta.validation-api:2.0.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation project(':amenity-library')
+    implementation project(':member-library')
     implementation project(':membership-library')
     implementation project(':club-library')
     implementation project(':reservation-library')
