--- a/reservation-ui/package.json
+++ b/reservation-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reservation-ui",
+  "name": "invited",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,21 +10,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^8.0.0",
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.3",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.0.2",
+    "angular-dual-listbox": "^7.0.0",
+    "ng-image-slider": "^6.1.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.2",
-    "@angular/cli": "~14.2.2",
+    "@angular-devkit/build-angular": "^14.2.4",
+    "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
